feat: implement favs endpoint
